# template-farm

./: Makefile  README.md  README_main.md  pyproject.toml  requirements.txt  template_setup.py
logs/: .gitignore  logging.conf
src/template_farm/: __init__.py  __main__.py  api.py  path.py  utils.py
tests/: api_test.py  conftest.py  utils_test.py
