[tool.pdm]
[tool.pdm.dev-dependencies]
workflow = [
    "pre-commit>=3.2.2",
    "mypy>=1.2.0",
    "types-PyYAML>=6.0.12.9",
]
test = [
    "pytest>=7.3.1",
    "httpx>=0.24.0",
]

[project]
name = "template-python"
version = "0.1.0"
description = ""
authors = [
    {name = "oedokumaci", email = "oral.ersoy.dokumaci@gmail.com"},
]
dependencies = [
    "pdm>=2.5.3",
    "fastapi>=0.95.2",
    "uvicorn>=0.22.0",
]
requires-python = ">=3.10"
readme = "README_main.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
